[tool.poetry]
name = "croppreclustering"
version = "0.1.0"
description = ""
authors = ["Henry J. Nelson <nels8279@umn.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numba = "^0.51.2"
open3d = "^0.11.1"
numpy = "^1.19.3"
scipy = "^1.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
